[project]
name = "python-nexus"
version = "1.1.0"
description = "Local caching proxy for PyPI, Maven, and NPM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "beautifulsoup4==4.14.2",
    "fastapi==0.139.0",
    "httpx2>=2.6.0",
    "uvicorn==0.51.0",
    "click>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[[tool.uv.index]]
url = "https://nexus.c2lb.ismc.intelink.gov/pypi/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
